# crud_auth_github

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  renovate.json
.github/: dependabot.yaml
.github/workflows/: python-app-pip.yml  python-app-poetry.yml  python-app.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: edit-profile.html
accounts/templates/registration/: login.html  signup.html
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/settings/: base_settings.py  production_settings.py  test_settings.py
kubernetes/: django-deployment.yaml  django-service.yaml  ingress.yaml  postgres-deployment.yaml  postgres-service.yaml
kubernetes/app/: external-secret.yaml  namespace.yaml
kubernetes/app/django/: configmap.yaml  django-deployment.yaml  django-service.yaml  ingress-route.yaml
kubernetes/app/postgres/: pg-storage.yaml  postgres-PVC.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-secret.yaml  postgres-service.yaml
kubernetes/cloudflare/: deployment.yaml
kubernetes/external-secrets/: kustomization.yaml  secret-store.yaml
kubernetes/external-secrets/crds/: kubernetes-client.io_externalsecrets_crd.yaml
kubernetes/traefik/: deployment.yaml  namespace.yaml
templates/: base.html  home.html  login.html
templates/account/: base.html
tests/accounts/: test_accounts.py
tests/core/: test_core.py
