[tool.poetry]
name = "crud-auth-github"
version = "2"
description = ""
authors = ["piwero <piwero@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
asgiref = "^3.7.2"
Django = "^4.0.0"
django-allauth = "^0.54.0"
django-crispy-forms = "^1.14.0"
dj-database-url = "^2.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
python = "^3.10"
python-decouple = "^3.6"
sqlparse = "^0.4.4"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-extensions = "^3.2.3"
mypy = "^1.2.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.2.1"
ruff = "^0.0.275"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test_settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.ruff]
select = ["E","F","I"]
ignore = ["E501",]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**/migrations",
    "settings.py"
	]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
